--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- titolo + descrizione -->
-    <header>
+    <div id="container">
+        <!-- titolo + descrizione -->
+        <header>
+            <h1>Meet Our Team</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae excepturi labore, voluptates sunt adipisci rem temporibus, veniam illo aliquid illum, dignissimos quidem cupiditate aperiam autem rerum ipsam ipsa accusamus? Veniam?</p>
+        </header>
 
-    </header>
-
-    <!-- cards del team -->
-    <main>
-        
-    </main>
-
+        <!-- cards del team -->
+        <main>
+            
+        </main>
+    </div>
 </body>
 </html>
