Impostazione card team

--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
 
         <!-- cards del team -->
         <main>
-            
+            <section class="card-container">
+
+                <div class="card"></div>
+
+                <div class="card"></div>
+
+                <div class="card"></div>
+
+                <div class="card"></div>
+
+                <div class="card"></div>
+
+                <div class="card"></div>
+                
+            </section>
+
         </main>
     </div>
 </body>
