--- a/index.html
+++ b/index.html
@@ -21,18 +21,86 @@
         <main>
             <section class="card-container">
 
-                <div class="card"></div>
+                <div class="card">
+                    <div class="contenuto">
+                        <img src="img/male1.png" alt="">
 
-                <div class="card"></div>
+                            <div class="dati-dipendente">
+                                <h3>MARCO BIANCHI</h3>
+                                <div>Designer</div>
+                                <div class="email">marcobianchi@team.com</div>
+                            </div>
+                    </div>
 
-                <div class="card"></div>
+                </div>
 
-                <div class="card"></div>
+                <div class="card">
+                    <div class="contenuto">
+                        <img src="img/female1.png" alt="">
 
-                <div class="card"></div>
+                            <div class="dati-dipendente">
+                                <h3>LAURA ROSSI</h3>
+                                <div>Front-end Developer</div>
+                                <div class="email">laurarossi@team.com</div>
+                            </div>
+                    </div>
 
-                <div class="card"></div>
-                
+                </div>
+
+                <div class="card">
+                    <div class="contenuto">
+                        <img src="img/male2.png" alt="">
+
+                            <div class="dati-dipendente">
+                                <h3>GIORGIO VERDI</h3>
+                                <div>Back-end Developer</div>
+                                <div class="email">giorgioverdi@team.com</div>
+                            </div>
+                    </div>
+
+                </div>
+
+                <div class="card">
+                    <div class="contenuto">
+                        <img src="img/female2.png" alt="">
+
+                            <div class="dati-dipendente">
+                                <h3>MARTA IPSUM</h3>
+                                <div>SEO Specialist</div>
+                                <div class="email">martaipsum@team.com</div>
+                            </div>
+                    </div>
+
+                </div>
+
+                <div class="card">
+                    <div class="contenuto">
+                        <img src="img/male3.png" alt="">
+
+                            <div class="dati-dipendente">
+                                <h3>ROBERTO LOREM</h3>
+                                <div>Project Manager</div>
+                                <div class="email">robertolorem@team.com</div>
+                            </div>
+                    </div>
+
+                </div>
+
+                <div class="card">
+                    <div class="contenuto">
+                        <img src="img/female3.png" alt="">
+
+                            <div class="dati-dipendente">
+                                <h3>DANIELA AMET</h3>
+                                <div>Analyst</div>
+                                <div class="email">danielaamet@team.com</div>
+                            </div>
+                    </div>
+
+                </div>
+
+
+
             </section>
 
         </main>
