--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Team</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 
                 <div class="card">
                     <div class="contenuto">
-                        <img src="img/male1.png" alt="">
+                        <img src="img/male1.png" alt="marcobianchi">
 
                             <div class="dati-dipendente">
                                 <h3>MARCO BIANCHI</h3>
@@ -36,7 +36,7 @@
 
                 <div class="card">
                     <div class="contenuto">
-                        <img src="img/female1.png" alt="">
+                        <img src="img/female1.png" alt="laurarossi">
 
                             <div class="dati-dipendente">
                                 <h3>LAURA ROSSI</h3>
@@ -49,7 +49,7 @@
 
                 <div class="card">
                     <div class="contenuto">
-                        <img src="img/male2.png" alt="">
+                        <img src="img/male2.png" alt="giorgioverdi">
 
                             <div class="dati-dipendente">
                                 <h3>GIORGIO VERDI</h3>
@@ -62,7 +62,7 @@
 
                 <div class="card">
                     <div class="contenuto">
-                        <img src="img/female2.png" alt="">
+                        <img src="img/female2.png" alt="martaipsum">
 
                             <div class="dati-dipendente">
                                 <h3>MARTA IPSUM</h3>
@@ -75,7 +75,7 @@
 
                 <div class="card">
                     <div class="contenuto">
-                        <img src="img/male3.png" alt="">
+                        <img src="img/male3.png" alt="robertolorem">
 
                             <div class="dati-dipendente">
                                 <h3>ROBERTO LOREM</h3>
@@ -88,7 +88,7 @@
 
                 <div class="card">
                     <div class="contenuto">
-                        <img src="img/female3.png" alt="">
+                        <img src="img/female3.png" alt="danielaamet">
 
                             <div class="dati-dipendente">
                                 <h3>DANIELA AMET</h3>
