--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="container">
         <!-- titolo + descrizione -->
@@ -19,7 +20,6 @@
 
         <!-- cards del team -->
         <main>
-            <section class="card-container">
 
                 <div class="card">
                     <div class="contenuto">
@@ -98,10 +98,6 @@
                     </div>
 
                 </div>
-
-
-
-            </section>
 
         </main>
     </div>
