Rifiniture post correzione

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
                             <div class="dati-dipendente">
                                 <h3>MARCO BIANCHI</h3>
-                                <div>Designer</div>
-                                <div class="email">marcobianchi@team.com</div>
+                                <span class="ruolo">Designer</span>
+                                <a href="mail" class="email">marcobianchi@team.com</a>
                             </div>
                     </div>
 
@@ -40,8 +40,8 @@
 
                             <div class="dati-dipendente">
                                 <h3>LAURA ROSSI</h3>
-                                <div>Front-end Developer</div>
-                                <div class="email">laurarossi@team.com</div>
+                                <span class="ruolo">Front-end Developer</span>
+                                <a href="mail" class="email">laurarossi@team.com</a>
                             </div>
                     </div>
 
@@ -53,8 +53,8 @@
 
                             <div class="dati-dipendente">
                                 <h3>GIORGIO VERDI</h3>
-                                <div>Back-end Developer</div>
-                                <div class="email">giorgioverdi@team.com</div>
+                                <span class="ruolo">Back-end Developer</span>
+                                <a href="mail" class="email">giorgioverdi@team.com</a>
                             </div>
                     </div>
 
@@ -66,8 +66,8 @@
 
                             <div class="dati-dipendente">
                                 <h3>MARTA IPSUM</h3>
-                                <div>SEO Specialist</div>
-                                <div class="email">martaipsum@team.com</div>
+                                <span class="ruolo">SEO Specialist</span>
+                                <a href="mail" class="email">martaipsum@team.com</a>
                             </div>
                     </div>
 
@@ -79,8 +79,8 @@
 
                             <div class="dati-dipendente">
                                 <h3>ROBERTO LOREM</h3>
-                                <div>Project Manager</div>
-                                <div class="email">robertolorem@team.com</div>
+                                <span class="ruolo">Project Manager</span>
+                                <a href="mail" class="email">robertolorem@team.com</a>
                             </div>
                     </div>
 
@@ -92,8 +92,8 @@
 
                             <div class="dati-dipendente">
                                 <h3>DANIELA AMET</h3>
-                                <div>Analyst</div>
-                                <div class="email">danielaamet@team.com</div>
+                                <span class="ruolo">Analyst</span>
+                                <a href="mail" class="email">danielaamet@team.com</a>
                             </div>
                     </div>
 
